<resources>
    <string name="app_name" translatable="false">MusicArtistsApp</string>
    <string name="dataset">artists</string>
    <string name="default_description">This is default artist.</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="any">Any</string>
    <string name="add_new_artist">Add new artist</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload image</string>
    <string name="save">Save</string>
    <string name="upload_video">Upload video</string>
    <string name="play_video">Play video</string>
    <string name="reset_filter">Reset filter</string>
    <string name="settings">Settings</string>

    <string name="usa">USA</string>
    <string name="australia">Australia</string>
    <string name="england">England</string>
    <string name="canada">Canada</string>
    <string name="electronic">Electronic</string>
    <string name="hip_hop">Hip-hop</string>
    <string name="pop">Pop</string>
    <string name="rnb">R&amp;B</string>
    <string name="soul">Soul</string>

    <string-array name="countries_any">
        <item>@string/any</item>
        <item>@string/usa</item>
        <item>@string/australia</item>
        <item>@string/england</item>
        <item>@string/canada</item>
    </string-array>

    <string-array name="countries">
        <item>@string/usa</item>
        <item>@string/australia</item>
        <item>@string/england</item>
        <item>@string/canada</item>
    </string-array>

    <string-array name="genres_any">
        <item>@string/any</item>
        <item>@string/electronic</item>
        <item>@string/hip_hop</item>
        <item>@string/pop</item>
        <item>@string/rnb</item>
        <item>@string/soul</item>
    </string-array>

    <string-array name="genres">
        <item>@string/electronic</item>
        <item>@string/hip_hop</item>
        <item>@string/pop</item>
        <item>@string/rnb</item>
        <item>@string/soul</item>
    </string-array>

    <string-array name="background_color_array">
        <item>White</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="font_size_array">
        <item>12sp</item>
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
    </string-array>

    <string-array name="font_family_array">
        <item>sans-serif</item>
        <item>casual</item>
        <item>cursive</item>
        <item>monospace</item>
    </string-array>
</resources>
